--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -10,8 +10,6 @@
 		<dict>
 			<key>Debug</key>
 			<false/>
-			<key>DropOEM_DSM</key>
-			<false/>
 			<key>Fixes</key>
 			<dict>
 				<key>AddHDMI</key>
@@ -340,8 +338,6 @@
 		<false/>
 		<key>KernelLapic</key>
 		<false/>
-		<key>KernelPm</key>
-		<true/>
 		<key>KernelXCPM</key>
 		<false/>
 		<key>KextsToPatch</key>
@@ -453,7 +449,7 @@
 		<key>MLB</key>
 		<string>C02904102QXKGQG1H</string>
 		<key>ROM</key>
-		<data>vPfbALuJ</data>
+		<data>aY5TS/yF</data>
 	</dict>
 	<key>SMBIOS</key>
 	<dict>
@@ -468,7 +464,7 @@
 		<key>BoardManufacturer</key>
 		<string>Apple Inc.</string>
 		<key>BoardSerialNumber</key>
-		<string>C02813102QXJ0PGCB</string>
+		<string>C02732207GUJ0PGA8</string>
 		<key>BoardType</key>
 		<integer>10</integer>
 		<key>BoardVersion</key>
@@ -498,16 +494,16 @@
 		<key>ProductName</key>
 		<string>iMac18,3</string>
 		<key>SerialNumber</key>
-		<string>C02WHMYBJ1GJ</string>
+		<string>C02V6YYFJ1GJ</string>
 		<key>SmUUID</key>
-		<string>932A7B0C-CE75-4CE6-BFB5-D2647000BB89</string>
+		<string>69BB4715-03DA-4F4D-9A45-7454E54BFC85</string>
 		<key>Version</key>
 		<string>1.0</string>
 	</dict>
 	<key>SystemParameters</key>
 	<dict>
 		<key>CustomUUID</key>
-		<string>06AE84AB-1D9E-4ECF-941B-7C54CBDC4C4D</string>
+		<string>9ECDA076-C0DE-4F78-81FA-6BFFF1A5E19F</string>
 		<key>InjectKexts</key>
 		<string>Yes</string>
 		<key>InjectSystemID</key>
