--- a/EFI-核显/OC/Kexts/Lilu.kext/Contents/Info.plist
+++ b/EFI-核显/OC/Kexts/Lilu.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19H1323</string>
+	<string>22A5321d</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.5.6</string>
+	<string>1.6.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,23 +25,23 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.5.6</string>
+	<string>1.6.3</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12B45b</string>
+	<string>14A5228q</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>11.0</string>
+	<string>13.0</string>
 	<key>DTSDKBuild</key>
-	<string>20A2408</string>
+	<string>22A5266o</string>
 	<key>DTSDKName</key>
-	<string>macosx11.0</string>
+	<string>macosx13.0</string>
 	<key>DTXcode</key>
-	<string>1220</string>
+	<string>1400</string>
 	<key>DTXcodeBuild</key>
-	<string>12B45b</string>
+	<string>14A5228q</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
